2010-08-19  Per Bothner  <per@bothner.com>

	* ELisp.java: Update to use new Environment-setting methods.

2008-05-25  Per Bothner  <per@bothner.com>

	* ELisp.java (asChar): Generalize to use 20-bit ints.

2008-01-16  Per Bothner  <per@bothner.com>

	* lambda.java: Update FString -> CharSequence.

2007-02-27  Per Bothner  <per@bothner.com>

	* lambda.java (rewriteBody): Invoke Declaration.setCanWrite here.

2006-12-20  Per Bothner  <per@bothner.com>

	* Makefile.am (KAWA1): Remove unneeded macro.

2006-11-22  Per Bothner  <per@bothner.com>

	* Print.java: Rename Consumer methods append->write.

2006-11-20  Per Bothner  <per@bothner.com>

	* While.java: Remove redundant 'implements Printable'.

2006-11-17  Per Bothner  <per@bothner.com>

	* Print.java: Update writeChar -> append.

2006-11-13  Per Bothner  <per@bothner.com>

	* lambda.java: Update for SourceLocation-related changes.

2006-05-01  Per Bothner  <per@bothner.com>

	* ELisp.java (getLexer): Remove method - use super version.
	(read): Remove unused method.
	(class ELispReadTableEntry): Moved from ELispReader.java.
	(createReadTable): Moved from ELispReader.  Use new super method.
	* ELispReader.java: Remove no-longer-needed file.
	* Makefile.am: Upadte accordingly.
	* MiscOps.scm (emacs:read): Use new syntax and update to use
	LispReader rather than removed ELispReader.

2005-11-20  Per Bothner  <per@bothner.com>

	* Makefile.am (ALL): New macro, only if ENABLE_JEMACS.
	(list-sources): Remove no-longer-used rule.

2005-10-13  Per Bothner  <per@bothner.com>

	* lambda.java (rewriteBody): Update for changed Lambda.rewrite.

2005-07-21  Per Bothner  <per@bothner.com>

	* ELisp.java (environ): Since it is again possible to have multiple
	instances, set the environ field in the constructor, not statically.

2005-06-29  Per Bothner  <per@bothner.com>

	* ELisp.java (<init>):  No longer need to initialize TRUE here.

2005-06-04  Per Bothner  <per@bothner.com>
