@@ -86,11 +86,11 @@ InliningTest.checkEven(int)java.lang.Object: 34 bytes
 cycle1.isIsEven(int)boolean: 17 bytes
 cycle2.isIsOdd(int)boolean: 17 bytes
 binarytrees.bottomUpTree(int,int)binarytrees$TreeNode: 60 bytes
-binarytrees.test(int)java.lang.Object: 240 bytes
+binarytrees.test(int)void: 212 bytes
 binarytrees$TreeNode.itemCheck()int: 36 bytes
 fannkuch.vectorReverseSlice$Ex(int[],int,int)void: 35 bytes
 fannkuch.countFlips(int[],int[])int: 46 bytes
-fannkuch.fannkuch(int)int: 243 bytes
+fannkuch.fannkuch(int)int: 234 bytes
 fannkuchredux.fannkuch(int)int: 289 bytes
 fasta.randomNext(double)double: 28 bytes
 pidigits.pidigits(int,java.io.PrintStream)void: 125 bytes
@@ -103,12 +103,12 @@ pidigits$PiDigitSpigot.isSafe(int)boolean: 18 bytes
 pidigits$PiDigitSpigot.produce(int)pidigits$Transformation: 27 bytes
 pidigits$PiDigitSpigot.consume(pidigits$Transformation)pidigits$Transformation: 9 bytes
 mandelbrot.compute(int,java.io.PrintStream)void: 324 bytes
-nbody.nbodySystem(int)void: 207 bytes
+nbody.nbodySystem(int)void: 189 bytes
 nbody.advance(nbody$Body[],double)void: 330 bytes
 nbody.energy(nbody$Body[])double: 181 bytes
 nbody.jupiter()nbody$Body: 57 bytes
 nbody$Body.offsetMomentum(double,double,double)void: 32 bytes
-regexdna.regexdna(java.io.InputStream)java.lang.Object: 372 bytes
+regexdna.regexdna(java.io.InputStream)void: 355 bytes
 revcomp1.revcomp(java.io.InputStream)void: 382 bytes
 revcomp2.run(gnu.mapping.CallContext)void: 212 bytes
 revcomp2$RevByteArray.reverseAndPrint()void: 129 bytes
