@@ -1,3 +1,13 @@
+2010-10-23  Per Bothner  <per@bothner.com>
+
+	* Format.java: Set validateApplyKey property.
+	(formatToWriter, formatToOutputString): New method.
+	(formatToString): Change return type to String, rather than FString,
+	and swap args to make use of varargs.
+	(formatToString(char,Object,Object[])): Rename to formatToFString.
+	(format): Generalize to take Writer.  Use formatToWriter.
+	* CompileMisc.java (validateApplyFormat): New method.  
+
 2010-10-17  Per Bothner  <per@bothner.com>
 
 	* DisplayFormat.java (writeObjectRaw): For readable output of #!void
