@@ -1,3 +1,8 @@
+2010-10-23  Per Bothner  <per@bothner.com>
+
+	* inlining.expected: Update.  Optimization of format led to
+	slightly shorter methods.
+
 2010-10-21  Per Bothner  <per@bothner.com>
 
 	* chameneosredux.scm:  Change so that 'main' action
