@@ -1,3 +1,7 @@
+2010-10-23  Per Bothner  <per@bothner.com>
+
+	* MiscOps.scm (format): Update to call formatToFString.
+
 2010-08-19  Per Bothner  <per@bothner.com>
 
 	* ELisp.java: Update to use new Environment-setting methods.
